right adjust and fix overflow for posts

--- a/static/style.css
+++ b/static/style.css
@@ -32,6 +32,7 @@ body .file,
 }
 .blogwidth {
     max-width: var(--max-blog-width);
+    min-width: var(--max-blog-width);
 }
 
 body details.codeblock,
